Fixes #71 the small text size in glossary

--- a/theme/bath_bootstrap/style/custom.css
+++ b/theme/bath_bootstrap/style/custom.css
@@ -17,6 +17,11 @@ a.logo {
     float: right;
 }
 
+
+#page-mod-glossary-showentry table.glossarypopup {
+    font-size: 100%;
+}
+
 /* Custom CSS Settings
 -------------------------*/
 [[setting:customcss]]
